cmake_minimum_required(VERSION 3.21)
project(cLDtk LANGUAGES C)

set(CMAKE_C_STANDARD 99)

add_library(${PROJECT_NAME} SHARED parson.c cLDtk.c)
set_target_properties(${PROJECT_NAME} PROPERTIES PUBLIC_HEADER cLDtk.h)
install(TARGETS ${PROJECT_NAME}
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})